src/style.css
:root {
    --white: #fefefe;
    --main-blue: #1079be;
    --light-blue: #b4daf3;
    --medium-gray: #dddddd;
    --dark-gray: #2c3e50;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', 'Lato', sans-serif;
}

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    margin: 0;
}

main {
    flex: 1;
    display: grid;
    grid-template-columns: 0.5fr 1.5fr;
    background-color: var(--white);
}

header {
    padding: 1.8rem 2.5rem;
    background-color: var(--main-blue);
    color: white;
    font-size: 2.5rem;
    font-family: 'Bebas Neue', sans-serif;
}

.sidebar {
    display: flex;
    flex-direction: column;
    padding: 3rem 2rem;
    font-size: 1.3rem;
    max-width: 350px;
    background-color: var(--medium-gray);
    gap: 4rem;
}

.sidebar-nav {
    display: flex;
    flex-direction: column;
    gap: 0.8rem;
}

nav > p {
    padding-left: 25px;
    cursor: pointer;
}

.sidebar-projects {
    display: flex;
    flex-direction: column;
    gap: 0.8rem;
}

.projects-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.projects-header > button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25px;
    height: 25px;
    font-size: 1.3rem;
    font-weight: 800;
    border: none;
    cursor: pointer;
    /* background-color: var(--medium-gray); */ 
}

.project-preview {
    padding: 3rem 20px;
}

h1 {
    font-size: 1.8rem;
}

.add-task-btn {
    margin-top: 0.8rem;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 0.6rem;
    padding: 5px 8px;
    font-size: 1rem;
}
.add-task-btn > p {
    font-weight: 800;
}

.modal {
    min-width: 500px;
    min-height: 400px;
    background-color: gray;
    display: flex;
    flex-direction: column;
    padding: 1.5rem 2.1rem;
    border-radius: 25px;
    gap: 1.5rem;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
}

.modal-head {
    display: flex;
    justify-content: space-between;
}

#tasks-form {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.tasks-list {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.project-modal {
    display: flex;
    flex-direction: column;
}

.projects-list {
    display: flex;
    flex-direction: column;
    gap: 8px;
    word-wrap: break-word;
}

.projects-list > p {
    padding-left: 25px;
    cursor: pointer;
}

.hidden {
    display: none;
}

